# realtime-news-etl

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: daily-pipeline.yml  interval-pipeline.yml
data_helpers/: world_cities.parquet
docs/: ARCHITECTURE.md  CLEANUP_REPORT.md  CLI_COMPLETE_GUIDE.md  COMPREHENSIVE_GEO_ENRICHMENT.md  COORDINATE_QUALITY_GUIDE.md  GEO_ENRICHMENT_COMPARISON.md  GEO_ENRICHMENT_GUIDE.md  GUIDE.md  INCREMENTAL_MERGE.md  OCEAN_COORDINATES_FIX.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  QUICK_START.md  REFACTORING_SUMMARY.md  RESUME_FEATURE.md  SIMPLE_API_GUIDE.md  SSL_ERROR_HANDLING.md
examples/: ALL_EXAMPLES.py
src/news_cn/: __init__.py  _legacy_cli.py  api_client.py  config.py  consolidator.py  data_cleaner.py  deduplicator.py  downloader.py  duckdb_utils.py  efficient_processor.py  geo_corrector.py  gkg_api_client.py  modern_scraper.py  partition_utils.py  pipeline_cli.py  schemas.py  simple.py  state_manager.py  unified_processor.py
src/news_cn/utils/: diagnostics.py  pipeline_tools.py
tests/: __init__.py  test_diagnostics.py
