[project]
name = "news-cn"
version = "0.2.0"
description = "GDELT news data pipeline - modular, memory-efficient, beginner-friendly"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
keywords = ["gdelt", "news", "data-pipeline", "saudi-arabia", "duckdb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "duckdb>=1.4.3",
    "firecrawl-py>=4.13.4",
    "newspaper4k>=0.9.4.1",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "playwright>=1.57.0",
    "pyarrow>=14.0.0",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.0",
    "trafilatura>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "black>=24.0.0", "ruff>=0.1.0", "mypy>=1.0.0"]
bigquery = ["google-cloud-bigquery>=3.0.0", "db-dtypes>=1.0.0"]
scraping = ["nodriver>=0.37", "firecrawl-py>=1.0.0"]

[project.scripts]
# Main CLI - Unified pipeline (all-in-one)
# Main CLI - Unified pipeline (all-in-one)
news-cn = "news_cn.pipeline_cli:main"                # Unified pipeline: collect→clean→scrape→analyze

# Data processing CLIs
news-cn-scrape = "news_cn.modern_scraper:main"       # Modern layered scraper (Trafilatura -> Newspaper4k -> Playwright)
news-cn-clean = "news_cn.data_cleaner:main"          # Data cleaner with DuckDB SUMMARIZE
news-cn-geo = "news_cn.geo_corrector:main"           # Geographic correction and enrichment

# Utility CLIs
news-cn-diagnose = "news_cn.utils.diagnostics:main"
news-cn-tools = "news_cn.utils.pipeline_tools:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

# Enable linting rules
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

lint.ignore = [
    "E501", # line-too-long (handled by formatter)
]

# Allow autofix for all enabled rules
lint.fixable = ["ALL"]
lint.unfixable = []

# Exclude common directories
exclude = [".git", ".venv", "__pycache__", "build", "dist", "*.egg-info"]

[tool.black]
line-length = 100
target-version = ['py312']

[dependency-groups]
dev = ["pre-commit>=4.5.1", "ruff>=0.14.14"]
