[project]
name = "news-cn"
version = "0.3.0"
description = "GDELT news data pipeline - daily processing with S3 export"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Tabaqat", email = "dev@tabaqat.dev" }]
keywords = ["gdelt", "news", "data-pipeline", "saudi-arabia", "duckdb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "duckdb>=1.4.3",
    "newspaper4k>=0.9.4.1",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "playwright>=1.57.0",
    "pyarrow>=14.0.0",
    "python-dateutil>=2.9.0",
    "requests>=2.32.0",
    "trafilatura>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "ruff>=0.1.0", "mypy>=1.0.0"]

[project.scripts]
news-cn = "news_cn.pipeline_cli:main"
news-cn-scrape = "news_cn.modern_scraper:main"
news-cn-clean = "news_cn.data_cleaner:main"
news-cn-geo = "news_cn.geo_corrector:main"
news-cn-diagnose = "news_cn.utils.diagnostics:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

lint.ignore = [
    "E501", # line-too-long (handled by formatter)
]

lint.fixable = ["ALL"]
lint.unfixable = []

exclude = [".git", ".venv", "__pycache__", "build", "dist", "*.egg-info"]

[dependency-groups]
dev = ["pre-commit>=4.5.1", "ruff>=0.14.14"]
